--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
      
     <!-- Título da Página -->
     <title>Titulo da página</title>
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
     
     <style type="text/css">
       header {
