--- a/listo/index.html
+++ b/listo/index.html
@@ -20,7 +20,7 @@
           <p><u>Haga clic en el botón de abajo para continuar</u></p>
         </div>
         <div class="answer">
-          <a class="btn" href="LINK DO SITE">¡IR AL VÍDEO AHORA!</a>
+          <a class="btn" href="http://dominioparatestes.tk/">¡IR AL VÍDEO AHORA!</a>
         </div>
       </div>    
     </div>
