--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img class="img-fluid" src="./assets/img/hd.png" width="480px" height="480px">
             
             <!-- vsl -->
-
+<script type="text/javascript" id="scr_628b9a85cecb39000a397c98">var s=document.createElement("script");s.src="https://scripts.converteai.net/38a2ebc6-5f19-4ec1-a018-2d214760bacf/players/628b9a85cecb39000a397c98/player.js",s.async=!0,document.head.appendChild(s);</script><div class="py-lg-1 py-sm-1">
             
 
               </a>
